src/static/styles.css
@font-face {
  font-family: 'Fredoka';
  src: url('../static/fonts/Fredoka-VariableFont.ttf') format('truetype');
}

body {
  font-family: 'Fredoka', sans-serif;
  margin: 0;
  padding: 0;
  background: linear-gradient(180deg, #f8f8f8 0%, #e1e1e1 100%);
}

.app-container {
  position: relative;
  z-index: 1;
  height: 100vh; 
  overflow-y: auto; 
  overflow-x: hidden;
}

/* Background orbs */
.contain {
  position: relative;
  width: 100%;
  height: 100vh;
  overflow: hidden;
}

.background-layer {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  z-index: -1; /* Keep it behind the content */
  pointer-events: none; /* Prevent background interaction */
  overflow: hidden; /* Prevent scrollbars caused by background */
}

@keyframes ellipse-1 {
  0%   {right:0px; top:-100px;}
  25%  {right:100px; top:-50px;}
  50%  {right:200px; top:700px;}
  75%  {right:300px; top:600px;}
  100% {right:0px; top:400px;}
}

@keyframes ellipse-2 {
  0%   {left:0px; top:0px;}
  25%  {left:200px; top:50px;}
  50%  {left:400px; top:100px;}
  75%  {left:300px; top:-300px;}
  100% {left:0px; top:0px;}
}
.ellipse-1,
.ellipse-1 * {
  box-sizing: border-box;
}
.ellipse-1 {
animation: ellipse-1 10s linear 0s infinite alternate;
  background: linear-gradient(
    180deg,
    rgba(0, 139, 253, 0.322) 25%,
    rgba(41, 158, 226, 0.322) 100%
  );
  border-radius: 100%;
  width: 613.19px;
  height: 1053.81px;
  position: absolute;
  transform-origin: 10 0;
  transform: rotate(59.45deg) scale(1, 1);
  filter: blur(150px);
  z-index: 7;
}

.ellipse-2,
.ellipse-2 * {
  box-sizing: border-box;
}
.ellipse-2 {
animation: ellipse-2 10s linear 0s infinite alternate;
  background: linear-gradient(
    180deg,
    rgba(237, 54, 22, 0.322) 0%,
    rgba(226, 152, 41, 0.322) 100%
  );
  border-radius: 100%;
  width: 613.19px;
  height: 1053.81px;
  position: absolute;
  transform-origin: 10 0;
  transform: rotate(-59.45deg) scale(1, 1);
  filter: blur(150px);
  z-index: 7;
}


/* Navbar */
.navbar-container {
  display: flex;
  justify-content: space-between;
  align-items: center;
  width: 100%;
  margin: 10px;
  z-index: 10; /* Ensure navbar stays on top */
}

.navbar-left {
  display: flex;
  align-items: center;
}

.navbar-left button {
  background-color: transparent;
  border: none;
  margin-right: 15px;
  cursor: pointer;
  border-radius: 12px;
  transition: transform 0.1s;
}

.navbar-left button:active {
  transform: scale(0.98);
}

.navbar-left button img {
  width: 40px;
  height: 40px;
  vertical-align: middle;
  transition: opacity 0.1s;
}

.navbar-left button:active img {
  opacity: 0.7;
}

.shine {
  position: relative;
  display: inline-block;
  overflow: hidden; 
}

.shine img {
  display: block;
  width: 100%; 
  height: auto;
}

.shine::after {
  content: '';
  position: absolute;
  top: 0;
  left: -150%; 
  width: 200%; 
  height: 100%;
  background: linear-gradient(
    135deg,
    rgba(255, 255, 255, 0) 0%,
    rgba(255, 255, 255, 0.6) 50%,
    rgba(255, 255, 255, 0) 100%
  );
  transform: skewX(-20deg); 
  opacity: 0; 
  transition: opacity 0.3s;
  pointer-events: none;
}

.shine:hover::after {
  opacity: 1;
  animation: shine 1s linear;
}

@keyframes shine {
  0% {
    left: -150%;
  }
  100% {
    left: 150%;
  }
}

/*tooltip*/
.con-tooltip {

  position: relative;
  display: inline-block;
  transition: all 0.3s ease-in-out;
  cursor: default;
}

/*tooltip */
.tooltip {
  visibility: hidden;
  z-index: 1;
  opacity: .40;
  width: 60%;
  margin-left: 10px;
  padding: 0px 20px;

  background: #333333d8;
  color: #f0e6ee;
  
  position: absolute;
  top:-140%;
  left: -25%;
  

  border-radius: 9px;
  font: 16px;
  text-align: center;

  transform: translateY(9px);
  transition: all 0.3s ease-in-out;
  
  box-shadow: 0 0 3px rgba(56, 54, 54, 0.86);
}


/* tooltip  after*/
.tooltip::after {
  content: " ";
  width: 0;
  height: 0;
  
  border-style: solid;
  border-width: 12px 12.5px 0 12.5px;
  border-color: #333333d8 transparent transparent transparent;

  position: absolute;

}

.con-tooltip:hover .tooltip{
  visibility: visible;
  transform: translateY(-10px);
  opacity: 1;
    transition: .3s linear;
  animation: odsoky 1s ease-in-out infinite  alternate;

}
@keyframes odsoky {
  0%{
    transform: translateY(6px);	
  }

  100%{
    transform: translateY(1px);	
  }

}

.bottom .tooltip { top:115%; left:-20%; }

.bottom .tooltip::after{
  top:-22%;
  left:20%;
  transform: rotate(180deg);
}

.navbar-right {
  display: flex;
  align-items: center;
}

.logo-container {
  margin-right: 40px;
}

.logo-container img {
  width: 200px;
  height: auto;
}

/* Main */

.main-container {
  display: grid;
  grid-template-columns: 2fr 1fr;
  gap: 15px;
  margin: 0 10px;
  z-index: 1; 
}

.main-left-container {
  display: grid;
  grid-template-rows: 3fr 1fr;
  gap: 15px;
  height: calc(100vh - 100px);
}

.editor-container {
  background: linear-gradient(107.95deg, rgba(250, 225, 225, 0.425) 0%, rgba(241, 241, 241, 0.342) 48.5%, rgba(248, 244, 228, 0.384) 97%);
  border-radius: 10px;
  padding-top: 10px;
  padding-bottom: 20px;
  display: flex;
  flex-direction: column;
  box-shadow: 0px 4px 8px white inset, 0px 8px 8px rgba(0, 0, 0, 0.1);
  border: 1px solid #ddd;
  height: calc(60vh - 100px); /* Ensure a specific height so it can scroll */
  overflow-y: auto; /* Allow scrolling */
}

.editor-tab {
  margin-right: 15px;
  background-color: #ffff;
  margin-left: 25px;
  border-radius: 5px 5px 0 0;
  width: 100px;
  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
}

.tab-text {
  margin-left: 5px;
}

.editor-wrapper {
  display: flex;
  flex: 1;
  position: relative;
  justify-content: center;
  align-items: center;
  overflow: hidden;
}

.line-numbers {
  width: 10px;
  padding: 10px;
  text-align: right;
  color: #333;
  background-color: #ffff;
  border-radius: 0 0 0 10px;
  overflow: hidden;
  font-family: monospace;
  font-size: 14px;
  height: calc(100% - 20px);
  /* max-height: 450px; */
}

.editor {
  resize: none;
  width: calc(100% - 100px);
  border: none;
  font-family: monospace;
  font-size: 14px;
  outline: none;
  padding: 10px;
  background-color: #ffff;
  border-radius: 0 10px 10px 0;
  height: calc(100% - 20px);
  /* max-height: 450px; */
}

.compiler-log-container {
  background: linear-gradient(107.95deg, rgba(250, 225, 225, 0.425) 0%, rgba(241, 241, 241, 0.342) 48.5%, rgba(248, 244, 228, 0.384) 97%);
  border: 1px solid #ddd;
  border-radius: 5px;
  box-shadow: 0px 4px 8px white inset, 0px 8px 8px rgba(0, 0, 0, 0.1);
  border: 1px solid #ddd;
  padding: 10px 20px 10px 20px;
  height: 300px; /* or any desired height */
}
.compiler-log {
  background-color: #fff;
  border-radius: 0 0 5px 5px;
  padding: 10px;
  font-family: monospace;
  white-space: pre-wrap;
  color: #333;
  height: calc(100% - 40px);
  overflow-y: auto;
}

.compiler-log-tab {
  margin-right: 15px;
  background-color: #ffff;
  border-radius: 5px 5px 0 0;
  width: 120px;
  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
}

.tab-text-compiler-log {
  margin-left: 5px;
}

/* Table */

.main-right-container {
  background: linear-gradient(107.95deg, rgba(250, 225, 225, 0.425) 0%, rgba(241, 241, 241, 0.342) 48.5%, rgba(248, 244, 228, 0.384) 97%);
  border-radius: 10px;
  box-shadow: 0px 4px 8px white inset, 0px 8px 8px rgba(0, 0, 0, 0.1);
  border: 1px solid #ddd;
  padding: 20px;
  height: calc(89vh - 40px); /* Set the height (you can adjust this as needed) */
}


.table-tab {
  background-color: #ffff;
  border-radius: 5px 5px 0 0;
  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
  width: 55px;
  padding: 3px;
  overflow-y: auto; /* Allow scrolling */

}

.tab-text-table {
  margin-left: 5px;
}

.table-container {
  background-color: #fff;
  width: 100%;
  border-radius: 0 10px 10px 10px;
  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
  height: calc(100% - 20px);
  overflow-y: auto; /* Enable scrolling for table */
}

.table-wrapper {
  width: 100%;
  border-collapse: collapse;
}

.table-wrapper thead {
  border-bottom: 2px solid #d6d6cf;
}

.table-wrapper th {
  padding: 10px;
  background-color: #e7e6e1;
}

.table-wrapper td {
  padding: 5px;
  text-align: center;
}

.table-wrapper tr:nth-child(even) {
  background-color: #f1f0eb;
}
.table-wrapper tr:nth-child(odd) {
  background-color: #ffffff;
}

